<?xml version="1.0"?>
<package format="2">
  <name>liboculus</name>
  <version>0.0.1</version>
  <description>A ROS version of the Oculus sonar codebase </description>

  <maintainer email="mitchell.scott@uw.edu">igor</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <depend>active_object</depend>
  <depend>g3log_catkin</depend>
  <depend>gpmf</depend>
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
