<?xml version="1.0"?>
<package format="2">
  <name>liboculus</name>
  <version>0.0.1</version>
  <description>A ROS version of the Oculus sonar codebase</description>

  <maintainer email="mitchell.scott@uw.edu">igor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>g3log_ros</depend>

</package>
